force-app/main/default/objects/Treatment__c/fields/Balance_Details__c.field-meta.xml
<CustomField>
    <fullName>Balance_Details__c</fullName>
    <label>Balance Details</label>
    <length>25</length>
    <type>Text</type>
</CustomField>