force-app/main/default/objects/Treatment__c/fields/Cmitmnt_Status__c.field-meta.xml
<CustomField>
    <fullName>Cmitmnt_Status__c</fullName>
    <label>Commitment Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>