force-app/main/default/objects/Treatment__c/fields/Date_of_trtmnt__c.field-meta.xml
<CustomField>
    <fullName>Date_of_trtmnt__c</fullName>
    <label>Date of treatment</label>
    <type>Date</type>
</CustomField>