force-app/main/default/objects/Treatment__c/fields/Lst_Crdit_Rtng__c.field-meta.xml
<CustomField>
    <fullName>Lst_Crdit_Rtng__c</fullName>
    <label>Last Credit Rating</label>
    <length>25</length>
    <type>Text</type>
</CustomField>