force-app/main/default/objects/Treatment__c/fields/Min_Cutoff_Amt__c.field-meta.xml
<CustomField>
    <fullName>Min_Cutoff_Amt__c</fullName>
    <label>Minimum CutOff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>