force-app/main/default/objects/Treatment__c/fields/Notice_Amt__c.field-meta.xml
<CustomField>
    <fullName>Notice_Amt__c</fullName>
    <label>Notice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>