force-app/main/default/objects/Treatment__c/fields/Notice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_Due_Date__c</fullName>
    <label>Notice Due Date</label>
    <type>Date</type>
</CustomField>