force-app/main/default/objects/Treatment__c/fields/NSF_Chck_No__c.field-meta.xml
<CustomField>
    <fullName>NSF_Chck_No__c</fullName>
    <label>NSF Check Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>