force-app/main/default/objects/Treatment__c/fields/NSF_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>NSF_Post_Date__c</fullName>
    <label>NSF Post Date</label>
    <type>Date</type>
</CustomField>