force-app/main/default/objects/Treatment__c/fields/NSF_Reference__c.field-meta.xml
<CustomField>
    <fullName>NSF_Reference__c</fullName>
    <label>NSF Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>