force-app/main/default/objects/Treatment__c/fields/Past_Due_trtmnt__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_trtmnt__c</fullName>
    <label>Past Due at Time of treatment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>