force-app/main/default/objects/Treatment__c/fields/Seq_Number__c.field-meta.xml
<CustomField>
    <fullName>Seq_Number__c</fullName>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>