force-app/main/default/objects/Treatment__c/fields/Service_Rep__c.field-meta.xml
<CustomField>
    <fullName>Service_Rep__c</fullName>
    <label>Service Representative</label>
    <length>25</length>
    <type>Text</type>
</CustomField>