force-app/main/default/objects/Treatment__c/fields/Treatmnt_Amt__c.field-meta.xml
<CustomField>
    <fullName>Treatmnt_Amt__c</fullName>
    <label>Treatment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>